# Zephyr-Air-Mouse

./: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
app/: main.c
app/inc/: accelerometer.h  gpio_handler.h  usb_dev.h
app/src/: accelerometer.c  gpio_handler.c  usb_dev.c
boards/: stm32f3_disco.overlay
